apps/headlamp/headlamp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: headlamp
spec:
  type: ClusterIP
  selector:
    app: headlamp
  ports:
    - name: headlamp
      port: 80
      targetPort: 4466
