apps/headlamp/headlamp-local-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp-local

  labels:
    type: local
spec:
  rules:
    - host: headlamp.local
      http:
        paths:
          - backend:
              service:
                name: headlamp
                port:
                  number: 80
            path: /
            pathType: Prefix
